# Blokdoc

./: .env.example  .eslintrc.json  .gitignore  .ssh_config  CONTRIBUTING.md  LICENSE  README.md  blokdoc_ssh_key.pub  h_key  next.config.js  package-lock.json  package.json  tailwind.config.js
contracts/solana/: Anchor.toml  Cargo.toml  document_verification.rs
docs/: README.md
docs/api/: authentication.md
docs/architecture/: system-design.md
docs/blockchain/: solana-integration.md
docs/guides/: getting-started.md
src/blockchain/solana/: document.ts  index.ts  program.ts
src/components/home/: Features.tsx  Hero.tsx
src/components/layout/: Footer.tsx  Header.tsx
src/pages/: _app.tsx  _document.tsx
src/pages/api/documents/: [id].ts  index.ts
src/pages/dashboard/: index.tsx
src/pages/documents/: [id].tsx  upload.tsx
src/services/document/: cache.ts  index.ts  processor.ts  share.ts  upload.ts
src/services/storage/: arweave.ts  ipfs.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: config.ts  constants.ts  helpers.ts
tests/: README.md
tests/blockchain/: document-verification.test.ts
tests/e2e/: document-upload.test.ts
tests/integration/: api.test.ts
tests/unit/: document.test.ts
tests/utils/: test-helpers.ts
