[package]
name = "blokdoc"
version = "0.1.0"
description = "Blokdoc document verification and management smart contracts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blokdoc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
solana-program = "1.16.0"
thiserror = "1.0.40" 